cdk/cdk.out/CRUDCodePipelineStackCRUDecsStackId63780AA6.template.json
{
 "Resources": {
  "ECSTaskDefinitionTaskRole65B93C1C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/ECSTaskDefinition/TaskRole/Resource"
   }
  },
  "ECSTaskDefinition0FCBFB08": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": "public.ecr.aws/h9p9w3g7/crud:0.1.0-alpha.77",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ECSTaskDefinitioncrudcontainerLogGroup7BD1C23A"
        },
        "awslogs-stream-prefix": "str-prfix",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "crud-container",
      "PortMappings": [
       {
        "ContainerPort": 8080,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ECSTaskDefinitionExecutionRole6887322D",
      "Arn"
     ]
    },
    "Family": "CRUDCodePipelineStackCRUDecsStackIdECSTaskDefinitionD2F3551E",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ECSTaskDefinitionTaskRole65B93C1C",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/ECSTaskDefinition/Resource"
   }
  },
  "ECSTaskDefinitioncrudcontainerLogGroup7BD1C23A": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/ECSTaskDefinition/crud-container/LogGroup/Resource"
   }
  },
  "ECSTaskDefinitionExecutionRole6887322D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/ECSTaskDefinition/ExecutionRole/Resource"
   }
  },
  "ECSTaskDefinitionExecutionRoleDefaultPolicy424DBBB7": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ECSTaskDefinitioncrudcontainerLogGroup7BD1C23A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ECSTaskDefinitionExecutionRoleDefaultPolicy424DBBB7",
    "Roles": [
     {
      "Ref": "ECSTaskDefinitionExecutionRole6887322D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/ECSTaskDefinition/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "CRUDECSFargateServiceLBE4E9F100": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CRUDECSFargateServiceLBSecurityGroup3D3A90E7",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1Subnet3C273B99"
     },
     {
      "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2Subnet95FF715A"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1DefaultRouteFF4E2178",
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1RouteTableAssociation8B583A17",
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2DefaultRouteB1375520",
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2RouteTableAssociation43E5803C"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/LB/Resource"
   }
  },
  "CRUDECSFargateServiceLBSecurityGroup3D3A90E7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB CRUDCodePipelineStackCRUDecsStackIdCRUDECSFargateServiceLBD85CCF2A",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/LB/SecurityGroup/Resource"
   }
  },
  "CRUDECSFargateServiceLBSecurityGrouptoCRUDCodePipelineStackCRUDecsStackIdCRUDECSFargateServiceSecurityGroupADA361CB8080D1E32BDA": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "CRUDECSFargateServiceLBSecurityGroup3D3A90E7",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "CRUDECSFargateServiceSecurityGroupF6665B4E",
      "GroupId"
     ]
    },
    "FromPort": 8080,
    "ToPort": 8080
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/LB/SecurityGroup/to CRUDCodePipelineStackCRUDecsStackIdCRUDECSFargateServiceSecurityGroupADA361CB:8080"
   }
  },
  "CRUDECSFargateServiceLBPublicListener25513984": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "CRUDECSFargateServiceLBPublicListenerECSGroupD5739C84"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "CRUDECSFargateServiceLBE4E9F100"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/LB/PublicListener/Resource"
   }
  },
  "CRUDECSFargateServiceLBPublicListenerECSGroupD5739C84": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "CRUDECSFargateService7F618389": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsDefaultClusterMnL3mNNYN926A5246"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "crud-container",
      "ContainerPort": 8080,
      "TargetGroupArn": {
       "Ref": "CRUDECSFargateServiceLBPublicListenerECSGroupD5739C84"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "CRUDECSFargateServiceSecurityGroupF6665B4E",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1Subnet075EFF4C"
       },
       {
        "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2SubnetE4CEDF73"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "ECSTaskDefinition0FCBFB08"
    }
   },
   "DependsOn": [
    "CRUDECSFargateServiceLBPublicListenerECSGroupD5739C84",
    "CRUDECSFargateServiceLBPublicListener25513984"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/Service/Service"
   }
  },
  "CRUDECSFargateServiceSecurityGroupF6665B4E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/Service/SecurityGroup/Resource"
   }
  },
  "CRUDECSFargateServiceSecurityGroupfromCRUDCodePipelineStackCRUDecsStackIdCRUDECSFargateServiceLBSecurityGroup4FB637648080C9790B1F": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "CRUDECSFargateServiceSecurityGroupF6665B4E",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CRUDECSFargateServiceLBSecurityGroup3D3A90E7",
      "GroupId"
     ]
    },
    "ToPort": 8080
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CRUD-ECSFargateService/Service/SecurityGroup/from CRUDCodePipelineStackCRUDecsStackIdCRUDECSFargateServiceLBSecurityGroup4FB63764:8080"
   }
  },
  "EcsDefaultClusterMnL3mNNYN926A5246": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Resource"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpc7788A521": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/Resource"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1Subnet3C273B99": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1/Subnet"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1RouteTableA1FD6ACC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1RouteTableAssociation8B583A17": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1RouteTableA1FD6ACC"
    },
    "SubnetId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1Subnet3C273B99"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1DefaultRouteFF4E2178": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1RouteTableA1FD6ACC"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcIGW9C2C2B8F"
    }
   },
   "DependsOn": [
    "EcsDefaultClusterMnL3mNNYNVpcVPCGW2447264E"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1EIP8704DB2F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1/EIP"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1NATGateway5E3732C1": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1Subnet3C273B99"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1EIP8704DB2F",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1DefaultRouteFF4E2178",
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1RouteTableAssociation8B583A17"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2Subnet95FF715A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2/Subnet"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2RouteTable263DEAA5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2RouteTableAssociation43E5803C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2RouteTable263DEAA5"
    },
    "SubnetId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2Subnet95FF715A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2DefaultRouteB1375520": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2RouteTable263DEAA5"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcIGW9C2C2B8F"
    }
   },
   "DependsOn": [
    "EcsDefaultClusterMnL3mNNYNVpcVPCGW2447264E"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2EIPF0764873": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2/EIP"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2NATGateway4C855E00": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2Subnet95FF715A"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2EIPF0764873",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2DefaultRouteB1375520",
    "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2RouteTableAssociation43E5803C"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PublicSubnet2/NATGateway"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1Subnet075EFF4C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1RouteTable4F1D2E36": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1RouteTableAssociation34B92275": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1RouteTable4F1D2E36"
    },
    "SubnetId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1Subnet075EFF4C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1DefaultRouteA5ADF694": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet1RouteTable4F1D2E36"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet1NATGateway5E3732C1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2SubnetE4CEDF73": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2RouteTableDCE46591": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2RouteTableAssociation111C622F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2RouteTableDCE46591"
    },
    "SubnetId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2SubnetE4CEDF73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2DefaultRoute20CE2D89": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPrivateSubnet2RouteTableDCE46591"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcPublicSubnet2NATGateway4C855E00"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcIGW9C2C2B8F": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/IGW"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcVPCGW2447264E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpc7788A521"
    },
    "InternetGatewayId": {
     "Ref": "EcsDefaultClusterMnL3mNNYNVpcIGW9C2C2B8F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/VPCGW"
   }
  },
  "EcsDefaultClusterMnL3mNNYNVpcRestrictDefaultSecurityGroupCustomResource93A9A76E": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "EcsDefaultClusterMnL3mNNYNVpc7788A521",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "058486276453"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/EcsDefaultClusterMnL3mNNYN/Vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:058486276453:security-group/",
             {
              "Fn::GetAtt": [
               "EcsDefaultClusterMnL3mNNYNVpc7788A521",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-058486276453-us-east-1",
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31STW/CMAz9LdxDxiah7coYQ0xoq1rEFbnBdB4lqfJRhKr+9yUtlI5NO+X5+Tl5sf3An8Z8NICjGYrtfphTyqvEgtgzT20qFIZXr6AzsLgCs3/BHUmypCSb7uQto6QFkqh73Lk2QV2SwFDUwdwZizpQZ1gzggOvYpU3wuaMVE7iFMIW1SxXmfe0VNlcK1eEzAXXzNvdFGD9XdLwSVH4Cgg2lgq2z5CDFLi9cYQ5GEsi94q0UZDMygde/V2t2/d6cV9H/hfyrLngXn7lX0bb2e6Fwbl/M0HhNNlTJ/mfmGUajflFL2TLrwsRcutoyiKXehOJSyXaRt+hWLkw2bRtectfuYkxShBc5t0kApgtonC8g537Vh7hxCJNZehqd/FChilgJ2idnKOJ9Sv2eUBp65rFaJTT7XJ8OFs4X+/3QR36iSv+kYq0Kmkb2mwMWr+4mR9fzd6gh [...]
   },
   "Metadata": {
    "aws:cdk:path": "CRUD-CodePipelineStack/CRUD-ecsStackId/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "CRUDECSFargateServiceLoadBalancerDNSF0E2D41A": {
   "Value": {
    "Fn::GetAtt": [
     "CRUDECSFargateServiceLBE4E9F100",
     "DNSName"
    ]
   }
  },
  "CRUDECSFargateServiceServiceURLC7D4EAC8": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "CRUDECSFargateServiceLBE4E9F100",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "ExportsOutputRefEcsDefaultClusterMnL3mNNYN926A52466B0E57B7": {
   "Value": {
    "Ref": "EcsDefaultClusterMnL3mNNYN926A5246"
   },
   "Export": {
    "Name": "CRUDCodePipelineStackCRUDecsStackId63780AA6:ExportsOutputRefEcsDefaultClusterMnL3mNNYN926A52466B0E57B7"
   }
  },
  "ExportsOutputFnGetAttCRUDECSFargateService7F618389Name4D4A47FA": {
   "Value": {
    "Fn::GetAtt": [
     "CRUDECSFargateService7F618389",
     "Name"
    ]
   },
   "Export": {
    "Name": "CRUDCodePipelineStackCRUDecsStackId63780AA6:ExportsOutputFnGetAttCRUDECSFargateService7F618389Name4D4A47FA"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
